--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <div class="container">
-        <h1>Random Quotes</h1>
-        <p id="quote">Clike the button to get a random quote</p>
-        <button id="generate-btn">Generate Quote</button>
+      <h1>Random Quotes</h1>
+      <p id="quote" class="quote">Clike the button to get a random quote</p>
+      <p id="quote-author ">(author)</p>
+
+      <button id="generate-btn" class="btn">Generate Quote</button>
     </div>
     <script src="script.js"></script>
-</body>
-</html> 
+  </body>
+</html>
