--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <div class="container">
       <h1>Random Quotes</h1>
       <p id="quote" class="quote">Clike the button to get a random quote</p>
-      <p id="quote-author ">(author)</p>
-
+      <p id="quote-author">(author)</p>
       <button id="generate-btn" class="btn">Generate Quote</button>
     </div>
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
   </body>
 </html>
