--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       <p id="quote" class="quote">Clike the button to get a random quote</p>
       <p id="quote-author">(author)</p>
       <button id="generate-btn" class="btn">Generate Quote</button>
+      <button id="toggle-favorite-btn" class="btn">Add to Favorite</button>
+    </div>
+    <div class="favorites-container" id="favorites-container">
+      
     </div>
     <script src="script.js" type="module"></script>
   </body>
